--- a/index-real.html
+++ b/index-real.html
@@ -32,7 +32,7 @@
   var myArray = [
     "page/main/spheres.html",
     "page/main/pixels.html",
-    "page/main/cuts.html",
+    "page/main/cut.html",
     "page/main/center.html",
     "page/main/center-two.html"
   ];
