--- a/chinese-grid.html
+++ b/chinese-grid.html
@@ -28,10 +28,9 @@
 <h6 class="imgDescription">Click on the components to construt a figure of your choice and have two generated outcomes.</h6>
 
 <p class="indent bodyText">
-  In terms of making a new Chinese font, traditionally designers have to construct and adjust each character manually with pre-designed basic strokes. Unlike English, where there are only limited number of alphabets and symbols, the vast number of Chinese characters require the character making process to be repeated for at least a few thousands, sometimes tens of thousands times.
-  <!-- add another paragraph to state the reason of making this system -->
+  In terms of making a new Chinese font, traditionally, designers shall construct and adjust each character manually with pre-designed component strokes. Unlike English where there are only a small number of alphabets and symbols, the Chinese character making process is to be repeated for thousands of times due to its massive amount.
   <br>
-  The project aims at challenging the traditional method of Chinese type design with a systematic approach.
+  This project aims at challenging the traditional method of Chinese type design with a systematic approach, where a "toolkit (base grid)" is provided instead for anyone to make the characters they need in the way they prefer.
 </p>
 
 
@@ -42,13 +41,13 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="glitch-room.html"> <!-- change link -->
+  <a href="glitch-room.html">
     <p class="nextText">Next Project</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("glitch-room.html main"); // change link
+      $("#nextPage").load("glitch-room.html main");
     });
   </script>
 </div>
