--- a/omdia.html
+++ b/omdia.html
@@ -25,16 +25,22 @@
 <h1>Omdia</h1>
 
 <!-- place img -->
-<img src="img/" alt="Omdia by Nora Zhao">
+<div class="grid1">
+  <video width="100%" muted autoplay loop>
+    <source src="img/omdia/movie.mov" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
+<h6 class="imgDescription">Omdia brand movie.</h6>
+
 
 <!-- write img description-->
 <h6 class="imgDescription"></h6>
 
 <!-- write body text -->
 <p class="indent bodyText">
-  Established in 2019 with the combination of the Informa Tech’s research brands (Ovum, Heavy Reading, and Tractica) and the acquired IHS Markit technology research portfolio, Omdia combines the expertise of more than 400 analysts covering 150 markets and thousands of technology, media, and telecommunications companies. By "connecting the dots" across the entire tech ecosystem, Omdia helps businesses make better technology choices.
+  Established in 2019, Omdia is the new global technology research powerhouse which combines the expertise of more than 400 analysts covering 150 markets and thousands of technology, media and telecommunications companies. By "connecting the dots" across the entire tech ecosystem, Omdia helps businesses make better technology choices.
 </p>
-
 
 </main>
 
