--- a/index-real.html
+++ b/index-real.html
@@ -20,7 +20,7 @@
 <div class="row-container">
   <div class="firstRow" id="firstRow"> 
     <p class="indent headerText">
-      Artist and designer practicing across the areas of generative art, branding and graphic design.
+      I'm an artist and designer practicing across the areas of generative art, branding and graphic design.
     </p>
   </div>
   <div class="secondRow">
@@ -29,8 +29,9 @@
 </div>
 
 <script type="text/javascript">
+  // list links here
   var myArray = [
-    "page/main/spheres.html",
+    "page/main/sphere.html",
     "page/main/pixels.html",
     "page/main/cut.html",
     "page/main/center.html",
