--- a/omdia.html
+++ b/omdia.html
@@ -25,12 +25,11 @@
 <h1>Omdia</h1>
 
 <!-- place img -->
-<div class="grid1">
-  <video width="100%" muted autoplay loop>
-    <source src="img/omdia/movie.mov" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-</div>
+<video autoplay loop muted
+  src="img/omdia/movie.mov"
+  style="width: 100%;">
+  Your browser does not support the video tag.
+</video>
 <h6 class="imgDescription">Omdia brand movie.</h6>
 
 
