--- a/peacebird.html
+++ b/peacebird.html
@@ -25,9 +25,9 @@
 
 <!-- place img -->
 <video autoplay loop
-       src="img/peacebird/1.mov"
-       poster="posterimage.jpg"
-       style="width: 100%;">
+  src="img/peacebird/1.mov"
+  style="width: 100%;">
+  Your browser does not support the video tag.
 </video>
 
 
