--- a/rtw.html
+++ b/rtw.html
@@ -17,27 +17,40 @@
 </script>
 
 <main>
-<!-- write project summary-->
 <p class="indent headerText">
   Brand identity for an apparel company that provides classical quality products with a reasonable price.
 </p>
 
-
-<!-- write project title -->
 <h1>RTW</h1>
 
-<!-- place img -->
-<img src="img/rtw/1s.jpg" alt="RTW by Nora Zhao">
+<video autoplay loop
+  src="img/rtw/video.mp4"
+  style="width: 100%;">
+  Your browser does not support the video tag.
+</video>
 
-<!-- write img description-->
-<h6 class="imgDescription"></h6>
-
-<!-- write body text -->
 <p class="indent bodyText">
-</p>
-</main>
+  RTW is an apperal brand which stives to deliver better quality products at an honest price, by considering what truely matters to the customers from materials and manufacturing to the sales channels.
+  <br>
+  Colour combinations add diferentiation and vibrance to the brand expression, and can be found in various applications throughout.
 
+<div class="grid1">
+  <img src="img/rtw/tmall-1.jpg" alt="RTW by Nora Zhao">
+  <img src="img/rtw/tmall-2.jpg" alt="RTW by Nora Zhao">
+</div>
 
+<div class="grid1">
+  <img src="img/rtw/tag.jpg" alt="RTW by Nora Zhao">
+  <img src="img/rtw/bag.jpg" alt="RTW by Nora Zhao">
+  <img src="img/rtw/paper-bag.jpg" alt="RTW by Nora Zhao">
+  <img src="img/rtw/shop-bag.jpg" alt="RTW by Nora Zhao">
+  <div class="grid2 gridxto1">
+    <img src="img/rtw/u-summer.jpg" alt="RTW by Nora Zhao">
+    <img src="img/rtw/u-winter.jpg" alt="RTW by Nora Zhao">
+  </div>
+  <img src="img/rtw/poster.jpg" alt="RTW by Nora Zhao">
+  <img src="img/rtw/card.jpg" alt="RTW by Nora Zhao">
+</div>
 </main>
 
 <div class="pageDivider"></div>
