--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Me</title>
+<title>About and Contact</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -18,23 +18,21 @@
 
 <main>
 <p class="indent headerText">
-  For comission or collaboration, please don't hesitate to contact me through norazhaodesign@gmail.com.
+  For comission or collaboration, please don't hesitate to contact me.
 </p>
 
 <h1>About and Contact</h1>
 <img src="img/about/me.jpg" alt="">
 
 <p class="indent bodyText">
-  My name is Nora, a graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the areas of generative design, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
+  I'm Nora, an artist and graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the areas of generative art, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
   <br>
   I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
-</p>
-
-<p class="indent">
-  Email: norazhaodesign@gmail.com
   <br>
-  Mobile: +86 132 6007 1686
+  If you are interested, please email me at <u>norazhaodesign@gmail.com</u> for any possible comission or collaboration.
   <!-- <br>
+  Mobile: +86 132 6007 1686
+  <br>
   Wechat: leonorao
   <br>
   Instagram: norazhaodesign
@@ -42,8 +40,6 @@
   Linkedin: norazhaodesign -->
 </p>
 </main>
-
-<div class="pageDivider"></div>
 
 <div id="footer"></div>
 <script type="text/javascript">
