--- a/rtw.html
+++ b/rtw.html
@@ -34,7 +34,7 @@
   <br>
   Colour combinations add diferentiation and vibrance to the brand expression, and can be found in various applications throughout.
 
-<div class="grid1">
+<div class="grid2 gridxto1">
   <img src="img/rtw/tmall-1.jpg" alt="RTW by Nora Zhao">
   <img src="img/rtw/tmall-2.jpg" alt="RTW by Nora Zhao">
 </div>
