change index-real.html to index.html

--- a/glitch-pattern.html
+++ b/glitch-pattern.html
@@ -26,9 +26,9 @@
 <img src="img/glitch-pattern/1s-pro.jpg" alt="Glitch Pattern by Nora Zhao">
 
 <p class="indent bodyText">
-  Z-fighting is a phenomenon in 3D rendering which occurs when two or more layers are positioned in identical or proximate positions. Layers ‘fight’ with each other to be shown on screen pixels and results in a flickering rasterisation effect.
+  Z-fighting is a phenomenon in 3D rendering that occurs when two or more layers are positioned in identical or proximate positions. In such case, layers ‘fight’ with each other to be shown on screen pixels and results in a flickering rasterisation effect.
   <br>
-  With various configurations and utilisation this computer glitch as a graphic generator, these images allow us to have a glimpse of the digital world of 0s and 1s.
+  Through utilisation of this glitch as a graphic generator, these images allow us to have a glimpse of the digital world of 0s and 1s.
 </p>
 
 <div class="grid1">
