--- a/glitch-room.html
+++ b/glitch-room.html
@@ -18,13 +18,13 @@
 
 <main>
 <p class="indent headerText">
-  An interactive VR site which generates customised glitching patterns.
+  An interactive VR site that generates customised glitching patterns.
 </p>
 
 <h1>Glitch Room</h1>
 <img src="img/glitch-room/1-6b.png" alt="Glitch Room by Nora Zhao">
 
-<h6 class="imgDescription">A model customisation page screenshot.</h6>
+<h6 class="imgDescription">Screenshot of a model customisation page.</h6>
 
 <p class="indent bodyText">
   Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
