--- a/rtw.html
+++ b/rtw.html
@@ -18,7 +18,7 @@
 
 <main>
 <p class="indent headerText">
-  Brand identity for an apparel company that provides classical quality products with a reasonable price.
+  Brand identity for an apparel company that provides quality products with a reasonable price.
 </p>
 
 <h1>RTW</h1>
@@ -31,8 +31,7 @@
 
 <p class="indent bodyText">
   RTW is an apperal brand which stives to deliver better quality products at an honest price, by considering what truely matters to the customers from materials and manufacturing to the sales channels.
-  <br>
-  Colour combinations add diferentiation and vibrance to the brand expression, and can be found in various applications throughout.
+</p>
 
 <div class="grid2 gridxto1">
   <img src="img/rtw/tmall-1.jpg" alt="RTW by Nora Zhao">
@@ -41,8 +40,15 @@
 
 <div class="grid1">
   <img src="img/rtw/tag.jpg" alt="RTW by Nora Zhao">
+  <!-- <img src="img/rtw/paper-bag.jpg" alt="RTW by Nora Zhao"> -->
+</div>
+
+<p class="indent bodyText">
+  Various colour combinations add differentiation and vibrance to the brand expression, and can be found in applications throughout.
+</p>
+
+<div class="grid1">
   <img src="img/rtw/bag.jpg" alt="RTW by Nora Zhao">
-  <img src="img/rtw/paper-bag.jpg" alt="RTW by Nora Zhao">
   <img src="img/rtw/shop-bag.jpg" alt="RTW by Nora Zhao">
   <div class="grid2 gridxto1">
     <img src="img/rtw/u-summer.jpg" alt="RTW by Nora Zhao">
