--- a/navigation.html
+++ b/navigation.html
@@ -26,7 +26,7 @@
 
 <!-- home button ---------------------------------------- -->
 <!-- <p id="homeBtn" onclick="window.location.href='index-real.html';">NORA ZHAO</p> -->
-<img id="homeBtn" onclick="window.location.href='index-real.html';" src="img/icon/norazhao.svg" alt="Home">
+<img id="homeBtn" onclick="window.location.href='index.html';" src="img/icon/norazhao.svg" alt="Home">
 
 <style>
     #homeBtn {
