--- a/navigation.html
+++ b/navigation.html
@@ -59,7 +59,7 @@
     <img id="closeBtn" onclick="closeNav()" src="img/icon/close.svg" alt="Close">
     <div style="margin-top: 2vh;"></div>
 
-    <p><a href="index-real.html">Home Page</a></p>
+    <p><a href="index.html">Home Page</a></p>
     <p><a href="about-and-contact.html">About and Contact</a></p>
     <br>
     <p class="type">Digital:</p>
