put language switch back in

--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
   });
 </script>
 
-
+<!-- text on the top -->
 <div class="row-container">
   <div class="firstRow" id="firstRow"> 
-    <p class="indent headerText">
+    <p class="en indent headerText">
       I'm an artist and designer practicing across the areas of generative art, branding and graphic design.
+    </p>
+    <p class="zh indent headerText">
+      我是一名实践于衍生式艺术、品牌和平面设计等领域的新媒体艺术家和设计师。
     </p>
   </div>
   <div class="secondRow">
