--- a/glitch-room.html
+++ b/glitch-room.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Glitch Room</title>
+<title>Glitch Room 故障房间</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -17,16 +17,21 @@
 </script>
 
 <main>
-<p class="indent headerText">
+<p class="en indent headerText">
   An interactive VR site that generates customised glitching patterns.
 </p>
+<p class="zh indent headerText">
+  可生成自定义故障图样的交互式虚拟现实网站。
+</p>
 
-<h1>Glitch Room</h1>
+<h1 class="en">Glitch Room</h1>
+<h1 class="zh">故障房间</h1>
 <img src="img/glitch-room/1-6b.png" alt="Glitch Room by Nora Zhao">
 
-<h6 class="imgDescription">Screenshot of a model customisation page.</h6>
+<h6 class="en imgDescription">Screenshot of a model customisation page.</h6>
+<h6 class="zh imgDescription">模型自定义页面截图。</h6>
 
-<p class="indent bodyText">
+<p class="en indent bodyText">
   Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
   <br>
   The project is situated in the context of glitch art. Using computer code as a design medium and z-fighting as methodology, it generates unique patterns every millisecond and displays them on-screen with a flickering effect.
@@ -34,6 +39,13 @@
   A control panel is implemented to allow customisation of the geometries while the 3D rendering mechanism produces personalised fit-to-screen graphic output.
   <br>
   Link to the website: <a href="https://glitchroom.com" target="_blank">glitchroom.com</a>
+</p>
+<p class="zh indent bodyText">
+  故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。
+  <br>
+  该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。
+  <br>
+  网站链接： <span lang="en"><a href="https://glitchroom.com">GLITCHROOM.COM</a></span>
 </p>
 
 <div class="grid1">
@@ -45,14 +57,16 @@
   <img src="img/glitch-room/8-1b.png" alt="Glitch Room by Nora Zhao">
 </div>
 
-<h6 class="imgDescription">Screenshots of 3D models in VR view.</h6>
+<h6 class="en imgDescription">Screenshots of 3D models in VR view.</h6>
+<h6 class="zh imgDescription">三维模型在虚拟现实空间中的截图。</h6>
 </main>
 
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
   <a href="glitch-pattern.html">
-    <p class="nextText">Next Project</p>
+    <p class="en nextText">Next Project</p>
+    <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
