--- a/404.html
+++ b/404.html
@@ -17,11 +17,15 @@ $(function(){
 </script>
 
 <main>
-<p class="indent headerText">
+<p class="en indent headerText">
   This link is invalid. Please click <a href="index.html">here</a> to visit the home page.
 </p>
+<p class="zh indent headerText">
+  无法找到该页面，请点击<a href="index.html">此处</a>返回主页。
+</p>
 
-<h1>404 Page Not Found</h1>
+<h1 class="en">404 Page Not Found</h1>
+<h1 class="zh">无该页面</h1>
 </main>
 </body>
 </html>
