--- a/omdia.html
+++ b/omdia.html
@@ -17,8 +17,11 @@
 </script>
 
 <main>
-<p class="indent headerText">
+<p class="en indent headerText">
   Brand identity framework for a global technology research powerhouse.
+</p>
+<p class="zh indent headerText">
+  为一家全球领先的技术研究机构设计品牌识别系统框架。
 </p>
 
 <h1>Omdia</h1>
@@ -29,17 +32,20 @@
   Your browser does not support the video tag.
 </video>
 
-<p class="indent bodyText">
+<p class="en indent bodyText">
   Established in 2019, Omdia is the new global technology research powerhouse which combines the expertise of more than 400 analysts covering 150 markets and thousands of technology, media and telecommunications companies. By "connecting the dots" across the entire tech ecosystem, Omdia helps businesses make better technology choices.
 </p>
-
+<p class="zh indent bodyText">
+  Omdia由Informa Tech旗下的市场分析公司Ovum、Heavy Reading、Tractica与收购的IHS Markit合并而成。它拥有逾400名一流的分析师和咨询师，覆盖150个市场，每年收集3.95亿个数据点，出版3000多部研究报告。这样的研究广度和深度使Omdia能够为整个科技生态圈的客户提供全方位的研究和分析服务。
+</p>
 </main>
 
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
   <a href="peacebird.html">
-    <p class="nextText">Next Project</p>
+    <p class="en nextText">Next Project</p>
+    <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
