--- a/byton.html
+++ b/byton.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Byton</title>
+<title>Byton 拜腾汽车</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -17,19 +17,26 @@
 </script>
 
 <main>
-<p class="indent headerText">
+<p class="en indent headerText">
   Tweaks on the visual assets of a startup electric car company to inject vibrance.
 <p>
+<p class="zh indent headerText">
+  新兴电动汽车品牌的视觉资产年轻化调整。
+<p>
 
-<h1>Byton</h1>
+<h1 class="en">Byton</h1>
+<h1 class="zh">拜腾汽车</h1>
 
 <img src="img/byton/3s.jpg" alt="Byton by Nora Zhao">
 
 <!-- write img description-->
-<h6 class="imgDescription"></h6>
+<h6 class="en imgDescription"></h6>
+<h6 class="zh imgDescription"></h6>
 
 <!-- write body text -->
-<p class="indent bodyText">
+<p class="en indent bodyText">
+</p>
+<p class="zh indent bodyText">
 </p>
 </main>
 
@@ -37,7 +44,8 @@
 
 <div class="nextPageDiv">
   <a href="chinese-grid.html"> <!-- change link -->
-    <p class="nextText">Next Project</p>
+    <p class="en nextText">Next Project</p>
+    <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
