--- a/glitch-pattern.html
+++ b/glitch-pattern.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Glitch Pattern</title>
+<title>Glitch Pattern 故障图纹</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -17,18 +17,25 @@
 </script>
 
 <main>
-<p class="indent headerText">
+<p class="en indent headerText">
   Pattern images generated with z-fighting glitch.
+</p>
+<p class="zh indent headerText">
+  由深度缓冲噪音生成的故障图纹。
 </p>
 
 <h1 class="en">Glitch Pattern</h1>
+<h1 class="zh">故障图纹</h1>
 
 <img src="img/glitch-pattern/1s-pro.jpg" alt="Glitch Pattern by Nora Zhao">
 
-<p class="indent bodyText">
+<p class="en indent bodyText">
   Z-fighting is a phenomenon in 3D rendering that occurs when two or more layers are positioned in identical or proximate positions. In such case, layers ‘fight’ with each other to be shown on screen pixels and results in a flickering rasterisation effect.
   <br>
   Through utilisation of this glitch as a graphic generator, these images allow us to have a glimpse of the digital world of 0s and 1s.
+</p>
+<p class="zh indent bodyText">
+  深度冲突(z-fighting)是3D渲染中因两个或多个平面具有一致或极为接近的位置时产生的。在这种情形下，不同的平面相互竞争以显示在屏幕像素上，最终产生一种闪烁的栅格化效果。
 </p>
 
 <div class="grid1">
@@ -43,7 +50,8 @@
 
 <div class="nextPageDiv">
   <a href="rtw.html">
-    <p class="nextText">Next Project</p>
+    <p class="en nextText">Next Project</p>
+    <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
