--- a/navigation.html
+++ b/navigation.html
@@ -87,7 +87,7 @@
       <input type="radio" id="zhBtn" name="language" value="zh">
       <label for="zhBtn">
         <p style="font-family: 'STSong', '华文宋体', 'NSimSun', '新宋体', 'SimSun', '宋体', serif;
-                  font-size: 1.6vmax;
+                  font-size: 1.8vmax;
                   position: relative;
                   bottom: 0.21vmax;
                   margin: 0;">中文</p>
@@ -145,28 +145,48 @@
 
 
 
-
+    <!-- contents ---------------------------------------- -->
     <div style="margin-top: 2vh;"></div>
 
-    <p><a href="index.html">Home Page</a></p>
-    <p><a href="about-and-contact.html">About and Contact</a></p>
+    <p class="en"><a href="index.html">Home Page</a></p>
+    <p class="zh"><a href="index.html">主页</a></p>
+
+    <p class="en"><a href="about-and-contact.html">About and Contact</a></p>
+    <p class="zh"><a href="about-and-contact.html">简介及联系方式</a></p>
     <br>
-    <p class="type">Digital:</p>
-    <p><a href="glitch-room.html">- Glitch Room</a></p>
-    <!-- <p><a href="weather-sphere.html">- Weather Sphere</a></p> -->
-    <p><a href="glitch-pattern.html">- Glitch Pattern</a></p>
-    <!-- <p><a href="coordinate-converter.html">- Coordinate Converter</a></p> -->
+
+    <p class="en type">Digital:</p>
+    <p class="zh type">数字：</p>
+
+    <p class="en"><a href="glitch-room.html">- Glitch Room</a></p>
+    <p class="zh"><a href="glitch-room.html">- 故障房间</a></p>
+
+    <p class="en"><a href="glitch-pattern.html">- Glitch Pattern</a></p>
+    <p class="zh"><a href="glitch-pattern.html">- 故障纹理图纹</a></p>
     <br>
-    <p class="type">Corporate:</p>
-    <p><a href="rtw.html">- RTW</a></p>
-    <p><a href="omdia.html">- Omdia</a></p>
-    <p><a href="peacebird.html">- Peacebird</a></p>
-    <!-- <p><a href="byton.html">- Byton</a></p> -->
+
+    <p class="en type">Brand Identity:</p>
+    <p class="zh type">品牌：</p>
+
+    <p class="en"><a href="rtw.html">- RTW</a></p>
+    <p class="zh"><a href="rtw.html">- RTW</a></p>
+
+    <p class="en"><a href="omdia.html">- Omdia</a></p>
+    <p class="zh"><a href="omdia.html">- OMDIA</a></p>
+
+    <p class="en"><a href="peacebird.html">- Peacebird</a></p>
+    <p class="zh"><a href="peacebird.html">- 太平鸟服饰</a></p>
     <br>
-    <p class="type">Design:</p>
-    <p><a href="chinese-grid.html">- Chinese Grid</a></p>
+
+    <p class="en type">Design:</p>
+    <p class="zh type">设计：</p>
+
+    <p class="en"><a href="chinese-grid.html">- Chinese Grid</a></p>
+    <p class="zh"><a href="chinese-grid.html">- 中文字形网格</a></p>
     <br>
-    <p class="type">Other:</p>
+
+    <!-- <p class="en type">Other:</p> -->
+    <!-- <p class="zh type">其他：</p> -->
   </nav>
 </div>
 <style>
