--- a/peacebird.html
+++ b/peacebird.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Peacebird</title>
+<title>Peacebird 太平鸟服饰</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -17,11 +17,15 @@
 </script>
 
 <main>
-<p class="indent headerText">
+<p class="en indent headerText">
   A refreshed visual identity for one of the best selling Chinese fashion brands.
 <p>
+<p class="zh indent headerText">
+  为一家中国时尚品牌进行视觉识别更新。
+<p>
 
-<h1>Peacebird</h1>
+<h1 class="en">Peacebird</h1>
+<h1 class="zh">太平鸟服饰</h1>
 
 <video autoplay loop
   src="img/peacebird/1.mov"
@@ -29,11 +33,12 @@
   Your browser does not support the video tag.
 </video>
 
-<p class="indent bodyText">
+<p class="en indent bodyText">
   While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive a better legibility on digital screens.
 </p>
-
-
+<p class="zh indent bodyText">
+  在维持衬线字体及其独特视觉特征的前提下，我们最大限度地简化了太平鸟的企业标识，使其能在数字屏幕上清晰显示。
+</p>
 </main>
 
 <div class="pageDivider"></div>
@@ -41,6 +46,7 @@
 <div class="nextPageDiv">
   <a href="chinese-grid.html">
     <p class="en nextText">Next Project</p>
+    <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
