--- a/rtw.html
+++ b/rtw.html
@@ -17,8 +17,11 @@
 </script>
 
 <main>
-<p class="indent headerText">
+<p class="en indent headerText">
   Brand identity for an apparel company that provides quality products with a reasonable price.
+</p>
+<p class="zh indent headerText">
+  为一家提供低价高质量的服饰品牌设计视觉识别系统。
 </p>
 
 <h1>RTW</h1>
@@ -29,8 +32,11 @@
   Your browser does not support the video tag.
 </video>
 
-<p class="indent bodyText">
+<p class="en indent bodyText">
   RTW is an apperal brand which stives to deliver better quality products at an honest price, by considering what truely matters to the customers from materials and manufacturing to the sales channels.
+</p>
+<p class="zh indent bodyText">
+  RTW这个服装品牌致力于以诚实的价格提供更高质量的产品。
 </p>
 
 <div class="grid2 gridxto1">
@@ -40,11 +46,13 @@
 
 <div class="grid1">
   <img src="img/rtw/tag.jpg" alt="RTW by Nora Zhao">
-  <!-- <img src="img/rtw/paper-bag.jpg" alt="RTW by Nora Zhao"> -->
 </div>
 
-<p class="indent bodyText">
+<p class="en indent bodyText">
   Various colour combinations add differentiation and vibrance to the brand expression, and can be found in applications throughout.
+</p>
+<p class="zh indent bodyText">
+  丰富的不同颜色组合为品牌表达增添了差异性和活力，且可应用于各类品牌表达中。
 </p>
 
 <div class="grid1">
@@ -63,7 +71,8 @@
 
 <div class="nextPageDiv">
   <a href="omdia.html">
-    <p class="nextText">Next Project</p>
+    <p class="en nextText">Next Project</p>
+    <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
