--- a/weather-sphere.html
+++ b/weather-sphere.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Weather Sphere</title>
+<title>Weather Sphere 天气球</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -17,29 +17,37 @@
 </script>
 
 <main>
-<p class="indent headerText">
+<p class="en indent headerText">
   Visualisation of a city's live weather data in the form of a 3D sphere.
 </p>
+<p class="zh indent headerText">
+  以三维球体模型视觉化一个城市的实时天气数据。
+</p>
 
-<h1>Weather Sphere</h1>
+<h1 class="en">Weather Sphere</h1>
+<h1 class="zh">天气球</h1>
 
 <div class="iframeWrapper iframe60">
   <iframe src="page/weather-sphere.html"></iframe>
 </div>
 
 <!-- write img description-->
-<h6 class="imgDescription"></h6>
+<h6 class="en imgDescription"></h6>
+<h6 class="zh imgDescription"></h6>
 
 <!-- write body text -->
-<p class="indent bodyText">
+<p class="en indent bodyText">
+</p>
+<p class="zh indent bodyText">
 </p>
 </main>
 
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="glitch-pattern.html">
-    <p class="nextText">Next Project</p>
+  <a href="glitch-pattern.html"><!-- change link -->
+    <p class="en nextText">Next Project</p>
+    <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
