--- a/navigation.html
+++ b/navigation.html
@@ -162,7 +162,7 @@
     <p class="zh"><a href="glitch-room.html">- 故障房间</a></p>
 
     <p class="en"><a href="glitch-pattern.html">- Glitch Pattern</a></p>
-    <p class="zh"><a href="glitch-pattern.html">- 故障纹理图纹</a></p>
+    <p class="zh"><a href="glitch-pattern.html">- 故障图纹</a></p>
     <br>
 
     <p class="en type">Brand Identity:</p>
