--- a/omdia.html
+++ b/omdia.html
@@ -24,7 +24,8 @@
   为一家全球领先的技术研究机构设计品牌识别系统框架。
 </p>
 
-<h1>Omdia</h1>
+<h1 class="en">Omdia</h1>
+<h1 class="zh">Omdia</h1>
 
 <video autoplay loop muted
   src="img/omdia/movie.mov"
