--- a/rtw.html
+++ b/rtw.html
@@ -24,7 +24,8 @@
   为一家提供低价高质量的服饰品牌设计视觉识别系统。
 </p>
 
-<h1>RTW</h1>
+<h1 class="en">RTW</h1>
+<h1 class="zh">RTW</h1>
 
 <video autoplay loop
   src="img/rtw/video.mp4"
