--- a/omdia.html
+++ b/omdia.html
@@ -41,6 +41,22 @@
   Omdia由Informa Tech旗下的市场分析公司Ovum、Heavy Reading、Tractica与收购的IHS Markit合并而成。它拥有逾400名一流的分析师和咨询师，覆盖150个市场，每年收集3.95亿个数据点，出版3000多部研究报告。这样的研究广度和深度使Omdia能够为整个科技生态圈的客户提供全方位的研究和分析服务。
 </p>
 
+
+<p class="en indent listText">
+  Client: Informa
+  <br>
+  Location: London, UK
+  <br>
+  Scope: Consumer Research, Brand Strategy, Naming, Brand Identity
+</p>
+<p class="zh indent listText">
+  客户：Informa
+  <br>
+  地点：英国伦敦
+  <br>
+  范围：消费者研究、品牌策略、命名、品牌识别
+</p>
+
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
