--- a/navigation.html
+++ b/navigation.html
@@ -175,7 +175,7 @@
     <p class="zh"><a href="omdia.html">- OMDIA</a></p>
 
     <p class="en"><a href="peacebird.html">- Peacebird</a></p>
-    <p class="zh"><a href="peacebird.html">- 太平鸟服饰</a></p>
+    <p class="zh"><a href="peacebird.html">- 太平鸟</a></p>
     <br>
 
     <p class="en type">Design:</p>
