--- a/peacebird.html
+++ b/peacebird.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Peacebird 太平鸟服饰</title>
+<title>Peacebird 太平鸟</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -39,6 +39,21 @@
 </p>
 <p class="zh indent bodyText">
   在维持衬线字体及其独特视觉特征的前提下，我们最大限度地简化了太平鸟的企业标识，使其能在数字屏幕上清晰显示。
+</p>
+
+<p class="en indent listText">
+  Client: Peacebird
+  <br>
+  Location: Ningbo, China
+  <br>
+  Scope: Visual Identity System, Guidelines
+</p>
+<p class="zh indent listText">
+  客户：太平鸟
+  <br>
+  地点：中国宁波
+  <br>
+  范围：视觉识别系统、指导手册
 </p>
 
 <div class="pageDivider"></div>
