--- a/glitch-room.html
+++ b/glitch-room.html
@@ -26,7 +26,7 @@
 
 <h1 class="en">Glitch Room</h1>
 <h1 class="zh">故障房间</h1>
-<img src="img/glitch-room/1-6b.png" alt="Glitch Room by Nora Zhao">
+<img src="img/glitch-room/bp4.jpg" alt="Glitch Room by Nora Zhao">
 
 <h6 class="en imgDescription">Screenshot of a model customisation page.</h6>
 <h6 class="zh imgDescription">模型自定义页面截图。</h6>
@@ -46,16 +46,16 @@
   <br>
   该项目在故障艺术这一领域进行了探索，以计算机代码为设计媒介，以深度缓冲噪音为方法，以闪烁的效果呈现每毫秒生成的独特图样。网站通过植入用户可调的控制面板实现模型自定义，通过三维渲染机制生成适应设备及屏幕尺寸的个性化图样输出，二者结合使该项目同时实现了自定义及个性化。
   <br>
-  网站链接： <span lang="en"><a href="https://glitchroom.com">GLITCHROOM.COM</a></span>
+  网站链接：<a href="https://glitchroom.com" target="_blank">GLITCHROOM.COM</a>
 </p>
 
 <div class="grid1">
-  <img src="img/glitch-room/2b.png" alt="Glitch Room by Nora Zhao">
-  <img src="img/glitch-room/3b.png" alt="Glitch Room by Nora Zhao">
-  <img src="img/glitch-room/4b.png" alt="Glitch Room by Nora Zhao">
-  <img src="img/glitch-room/5b.png" alt="Glitch Room by Nora Zhao">
-  <img src="img/glitch-room/6b.png" alt="Glitch Room by Nora Zhao">
-  <img src="img/glitch-room/8-1b.png" alt="Glitch Room by Nora Zhao">
+  <img src="img/glitch-room/bp5.jpg" alt="Glitch Room by Nora Zhao">
+  <img src="img/glitch-room/bp6.jpg" alt="Glitch Room by Nora Zhao">
+  <img src="img/glitch-room/bp7.jpg" alt="Glitch Room by Nora Zhao">
+  <img src="img/glitch-room/bp8.jpg" alt="Glitch Room by Nora Zhao">
+  <img src="img/glitch-room/bp9.jpg" alt="Glitch Room by Nora Zhao">
+  <img src="img/glitch-room/bp11.jpg" alt="Glitch Room by Nora Zhao">
 </div>
 
 <h6 class="en imgDescription">Screenshots of 3D models in VR view.</h6>
