--- a/byton.html
+++ b/byton.html
@@ -27,14 +27,9 @@
 <h1 class="en">Byton</h1>
 <h1 class="zh">拜腾汽车</h1>
 
-<img src="img/byton/3s.jpg" alt="Byton by Nora Zhao">
+<img src="img/byton/teaser.jpg" alt="Byton by Nora Zhao">
 </main>
 
-<!-- write img description-->
-<h6 class="en imgDescription"></h6>
-<h6 class="zh imgDescription"></h6>
-
-<!-- write body text -->
 <p class="en indent bodyText">
   Byton is a an all-electric automotive brand established in 2017 and co-founded by former BMW and Nissan Motor executives. Their ambition goes beyond basic mobility, and is to create the next-generation smart device on wheels to seamlessly connect customer's digital life and make their time on the move more enjoyable.
   <br>
@@ -45,6 +40,12 @@
   <br>
   在推出首款汽车M-Byte SUV之前，他们希望升级其视觉识别系统以更好地表达愿景。这涉及对其所有现有接触点的全面审核，并对关键图形、调性、排版布局原则和摄影风格进行重塑。
 </p>
+
+<div class="grid1">
+  <img src="img/byton/poster1.jpg" alt="Byton by Nora Zhao">
+  <img src="img/byton/poster2.jpg" alt="Byton by Nora Zhao">
+  <img src="img/byton/poster3.jpg" alt="Byton by Nora Zhao">
+</div>
 
 <p class="en indent listText">
   Client: Byton
@@ -60,6 +61,23 @@
   <br>
   范围：视觉识别系统、包装、指导手册
 </p>
+
+<div class="grid1">
+  <img src="img/byton/lines.jpg" alt="Byton by Nora Zhao">
+  <img src="img/byton/store1.jpg" alt="Byton by Nora Zhao">
+</div>
+
+<div class="grid2 gridxto1">
+  <img src="img/byton/mobile.jpg" alt="Byton by Nora Zhao">
+  <img src="img/byton/ipad.jpg" alt="Byton by Nora Zhao">
+</div>
+
+<div class="grid1">
+  <img src="img/byton/bag.jpg" alt="Byton by Nora Zhao">
+  <img src="img/byton/box.jpg" alt="Byton by Nora Zhao">
+  <img src="img/byton/book.jpg" alt="Byton by Nora Zhao">
+  <img src="img/byton/card.jpg" alt="Byton by Nora Zhao">
+</div>
 
 <div class="pageDivider"></div>
 
