--- a/navigation.html
+++ b/navigation.html
@@ -176,6 +176,9 @@
 
     <p class="en"><a href="peacebird.html">- Peacebird</a></p>
     <p class="zh"><a href="peacebird.html">- 太平鸟</a></p>
+
+    <p class="en"><a href="byton.html">- Byton</a></p>
+    <p class="zh"><a href="byton.html">- 拜腾汽车</a></p>
     <br>
 
     <p class="en type">Design:</p>
