--- a/omdia.html
+++ b/omdia.html
@@ -27,11 +27,7 @@
 <h1 class="en">Omdia</h1>
 <h1 class="zh">Omdia</h1>
 
-<video autoplay loop muted
-  src="img/omdia/movie.mov"
-  style="width: 100%;">
-  Your browser does not support the video tag.
-</video>
+<img src="img/omdia/logo-tech.png" alt="Omdia by Nora Zhao">
 </main>
 
 <p class="en indent bodyText">
@@ -41,6 +37,9 @@
   Omdia由Informa Tech旗下的市场分析公司Ovum、Heavy Reading、Tractica与收购的IHS Markit合并而成。它拥有逾400名一流的分析师和咨询师，覆盖150个市场，每年收集3.95亿个数据点，出版3000多部研究报告。这样的研究广度和深度使Omdia能够为整个科技生态圈的客户提供全方位的研究和分析服务。
 </p>
 
+<div class="grid1">
+  <img src="img/omdia/guidelines.jpg" alt="Omdia by Nora Zhao">
+</div>
 
 <p class="en indent listText">
   Client: Informa
@@ -56,6 +55,13 @@
   <br>
   范围：消费者研究、品牌策略、命名、品牌识别
 </p>
+
+<div class="grid1">
+  <img src="img/omdia/report1.jpg" alt="Omdia by Nora Zhao">
+  <img src="img/omdia/report2.jpg" alt="Omdia by Nora Zhao">
+  <img src="img/omdia/report3.jpg" alt="Omdia by Nora Zhao">
+  <img src="img/omdia/leaflet.jpg" alt="Omdia by Nora Zhao">
+</div>
 
 <div class="pageDivider"></div>
 
