--- a/peacebird.html
+++ b/peacebird.html
@@ -27,11 +27,8 @@
 <h1 class="en">Peacebird</h1>
 <h1 class="zh">太平鸟服饰</h1>
 
-<video autoplay loop
-  src="img/peacebird/1.mov"
-  style="width: 100%;">
-  Your browser does not support the video tag.
-</video>
+<img src="img/peacebird/logo.jpg" alt="Peacebird by Nora Zhao">
+
 </main>
 
 <p class="en indent bodyText">
@@ -40,6 +37,10 @@
 <p class="zh indent bodyText">
   在维持衬线字体及其独特视觉特征的前提下，我们最大限度地简化了太平鸟的企业标识，使其能在数字屏幕上清晰显示。
 </p>
+
+<div class="grid1">
+  <img src="img/peacebird/poster5.jpg" alt="Peacebird by Nora Zhao">
+</div>
 
 <p class="en indent listText">
   Client: Peacebird
@@ -56,10 +57,17 @@
   范围：视觉识别系统、指导手册
 </p>
 
+<div class="grid4 gridxto2">
+  <img src="img/peacebird/poster1.jpg" alt="Peacebird by Nora Zhao">
+  <img src="img/peacebird/poster2.jpg" alt="Peacebird by Nora Zhao">
+  <img src="img/peacebird/poster3.jpg" alt="Peacebird by Nora Zhao">
+  <img src="img/peacebird/poster4.jpg" alt="Peacebird by Nora Zhao">
+</div>
+
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="chinese-grid.html">
+  <a href="byton.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
