--- a/rtw.html
+++ b/rtw.html
@@ -21,7 +21,7 @@
   Brand identity for an apparel company that provides quality products with a reasonable price.
 </p>
 <p class="zh indent headerText">
-  为一家提供低价高质量的服饰品牌设计视觉识别系统。
+  为一家以提供实惠价格的优等品质服饰为宗旨的品牌设计视觉识别系统。
 </p>
 
 <h1 class="en">RTW</h1>
@@ -42,8 +42,8 @@
 </p>
 
 <div class="grid2 gridxto1">
-  <img src="img/rtw/tmall-1.jpg" alt="RTW by Nora Zhao">
-  <img src="img/rtw/tmall-2.jpg" alt="RTW by Nora Zhao">
+  <img src="img/rtw/tmall1.jpg" alt="RTW by Nora Zhao">
+  <img src="img/rtw/tmall2.jpg" alt="RTW by Nora Zhao">
 </div>
 
 <div class="grid1">
