--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -21,7 +21,7 @@
   For comission or collaboration, please don't hesitate to contact me.
 </p>
 <p class="zh indent headerText">
-  如果您有项目或合作需求，可通过通过微信或致电13260071686联系我。
+  如果您有项目或合作需求，可通过通过微信或致电(+86) 13260071686联系我。
 </p>
 
 <h1 class="en">About and Contact</h1>
@@ -30,7 +30,7 @@
 </main>
 
 <p class="en indent bodyText">
-  I'm Nora, an artist and graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the areas of generative art, branding and conventional graphic design. I'm interested in the matter of image generation through creative coding.
+  I'm Nora, an artist and graphic designer from China. This website exhibits a selection of my past projects. My practice can be found across the areas of generative art, brand identity and conventional graphic design. I'm interested in the matter of image generation through creative coding.
   <br>
   I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
   <br>
@@ -43,11 +43,11 @@
   Linkedin: <a href="https://www.linkedin.com/in/norazhaodesign/">norazhaodesign</a>
 </p>
 <p class="zh indent bodyText">
-  我叫赵子娴，是一名来自中国的平面设计师。本网站选取并展示了我过去完成的一些设计项目。我所探索和实践的领域包括衍生式设计、品牌设计和传统的平面设计，我擅长以创意艺术编程的方法生成批量式随机图形。  <br>
+  我叫赵子娴，是一名来自中国的艺术家和平面设计师。本网站选取并展示了我过去完成的一些设计项目。我所探索和实践的领域包括生成式艺术、品牌识别以及传统的平面设计，我擅长以创意艺术编程的方法生成批量式随机图形。
   <br>
   我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学传媒学院的视觉传达设计研究生文凭（优秀，2018）和平面媒体设计硕士学位（优秀，2020）。  
   <br>
-  微信及联系电话: 13260071686
+  微信及联系电话: (+86) 13260071686
 </p>
 
 <div id="footer"></div>
