--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -36,12 +36,13 @@
   <br>
   If you are interested, please email me at <u>norazhaodesign@gmail.com</u> for any possible comission or collaboration.
   <br>
-  Email: <a href="#">norazhaodesign@gmail.com</a>
-  <br>
+  Email: norazhaodesign@gmail.com
+  <br style="margin-bottom: 0;">
   Instagram: <a href="https://www.instagram.com/norazhaodesign/">norazhaodesign</a>
   ·
   Linkedin: <a href="https://www.linkedin.com/in/norazhaodesign/">norazhaodesign</a>
 </p>
+
 <p class="zh indent bodyText">
   我叫赵子娴，是一名来自中国的艺术家和平面设计师。本网站选取并展示了我过去完成的一些设计项目。我所探索和实践的领域包括生成式艺术、品牌识别以及传统的平面设计，我擅长以创意艺术编程的方法生成批量式随机图形。
   <br>
