--- a/peacebird.html
+++ b/peacebird.html
@@ -74,7 +74,7 @@
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("chinese-grid.html main");
+      $("#nextPage").load("byton.html main");
     });
   </script>
 </div>
