--- a/byton.html
+++ b/byton.html
@@ -44,7 +44,11 @@
 <div class="grid1">
   <img src="img/byton/poster1.jpg" alt="Byton by Nora Zhao">
   <img src="img/byton/poster2.jpg" alt="Byton by Nora Zhao">
+</div>
+
+<div class="grid2">
   <img src="img/byton/poster3.jpg" alt="Byton by Nora Zhao">
+  <img src="img/byton/poster4.jpg" alt="Byton by Nora Zhao">
 </div>
 
 <p class="en indent listText">
