--- a/byton.html
+++ b/byton.html
@@ -42,8 +42,8 @@
 </p>
 
 <div class="grid1">
-  <img src="img/byton/poster1.jpg" alt="Byton by Nora Zhao">
-  <img src="img/byton/poster2.jpg" alt="Byton by Nora Zhao">
+  <img src="img/byton/poster1m.jpg" alt="Byton by Nora Zhao">
+  <img src="img/byton/poster2m.jpg" alt="Byton by Nora Zhao">
 </div>
 
 <div class="grid2">
