--- a/glitch-room.html
+++ b/glitch-room.html
@@ -65,7 +65,7 @@
   <img src="img/glitch-room/show3.jpg" alt="Glitch Room by Nora Zhao">
 </div>
 
-<div class="flex">
+<div class="flex flexto1">
   <div style="flex: calc(3086/2018);">
     <img src="img/glitch-room/show2.jpg" alt="Glitch Room by Nora Zhao">
   </div>
