--- a/navigation.html
+++ b/navigation.html
@@ -163,6 +163,9 @@
 
     <p class="en"><a href="glitch-pattern.html">- Glitch Pattern</a></p>
     <p class="zh"><a href="glitch-pattern.html">- 故障图纹</a></p>
+
+    <p class="en"><a href="visual-weather.html">- Visual Weather</a></p>
+    <p class="zh"><a href="visual-weather.html">- 可视天气</a></p>
     <br>
 
     <p class="en type">Brand Identity:</p>
