--- a/glitch-pattern.html
+++ b/glitch-pattern.html
@@ -225,14 +225,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="rtw.html">
+  <a href="visual-weather.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("rtw.html main");
+      $("#nextPage").load("visual-weather.html main");
     });
   </script>
 </div>
