--- a/visual-weather.html
+++ b/visual-weather.html
@@ -27,7 +27,7 @@
 <h1 class="en">Visual Weather</h1>
 <h1 class="zh">可视天气</h1>
 
-<div class="iframeWrapper iframe100">
+<div class="iframeWrapper iframe60 iframexto100">
   <iframe src="page/city.html"></iframe>
 </div>
 <h6 class="en imgDescription">△ Type in name of a city in English and click "Search" to generate the visuals.</h6>
