--- a/visual-weather.html
+++ b/visual-weather.html
@@ -30,7 +30,7 @@
 <div class="iframeWrapper iframe60 iframexto100">
   <iframe src="page/city.html"></iframe>
 </div>
-<h6 class="en imgDescription">△ Type in name of a city in English and click "Search" to generate the visuals.</h6>
+<h6 class="en imgDescription">△ Type in name of a city in English and click the search button to generate the visuals.</h6>
 <h6 class="zh imgDescription">△ 用英文输入城市名称，然后单击“搜索”以获取视觉产出。</h6>
 </main>
 
