--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   // list links here
   var myArray = [
     "page/main/cuts.html",
+    // "page/main/cuts-float.html",
     "page/main/square-pixels.html",
-    "page/main/cuts-float.html",
     "page/main/cards.html",
     // "page/main/center-blue-green.html",
     // "page/main/center-zoomed.html"
