--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     "page/main/square-pixels.html",
     "page/main/cards.html",
     // "page/main/center-blue-green.html",
-    // "page/main/center-zoomed.html"
+    // "page/main/center-zoomed.html",
+    "page/main/synsol-gradient.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
   document.getElementById('display').src = randomUrl;
