--- a/visual-weather.html
+++ b/visual-weather.html
@@ -31,7 +31,7 @@
   <iframe src="page/city.html"></iframe>
 </div>
 <h6 class="en imgDescription">△ Type in name of a city in English and click the search button to generate the visuals.</h6>
-<h6 class="zh imgDescription">△ 用英文输入城市名称，然后单击“搜索”以获取视觉产出。</h6>
+<h6 class="zh imgDescription">△ 用英文输入城市名称，然后单击“搜索”以获取视觉输出。</h6>
 </main>
 
 <p class="en indent bodyText">
@@ -42,7 +42,7 @@
 <p class="zh indent bodyText">
   该模型通过获取指定城市的实时天气数据将其转换为视觉效果。这个实验志在通过视觉表现直观地诠释天气信息，将其他感官联系起来。
   <br>
-  该模型通过风的数据决定色块的运动。以湿度、云和气压生成对应的RGB值来控制第一个颜色，用经纬度值计算第二种颜色，温度则产出第三种颜色。
+  该模型通过风的数据决定色块的运动。以湿度、云和气压值生成对应的RGB值来控制第一个颜色，用经纬度值计算第二个颜色，温度值则用于生成第三个颜色。
 </p>
 
 <div class="pageDivider"></div>
