--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nora Zhao</title>
+<title>Nora Zhao 赵子娴</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 <script src="js/jquery.min.js"></script>
 </head>
@@ -20,10 +20,10 @@
 <div class="row-container">
   <div class="firstRow" id="firstRow"> 
     <p class="en indent headerText">
-      I'm an artist and designer practicing across the areas of generative art, branding and graphic design.
+      I'm an artist and designer practicing across the areas of generative art, branding and graphic design. Refresh for new visuals.
     </p>
     <p class="zh indent headerText">
-      我是一名实践于衍生式艺术、品牌和平面设计等领域的新媒体艺术家和设计师。
+      我是一名实践于衍生式艺术、品牌和平面设计等领域的新媒体艺术家和设计师。刷新本页面以获取新视效。
     </p>
   </div>
   <div class="secondRow">
