--- a/rtw.html
+++ b/rtw.html
@@ -28,7 +28,7 @@
 <h1 class="zh">RTW</h1>
 
 <video autoplay loop
-  src="img/rtw/video.mp4"
+  src="img/rtw/video.mov"
   style="width: 100%;">
   Your browser does not support the video tag.
 </video>
