--- a/byton.html
+++ b/byton.html
@@ -67,6 +67,10 @@
 </p>
 
 <div class="grid1">
+  <img src="img/byton/ui.jpg" alt="Byton by Nora Zhao">
+</div>
+
+<div class="grid1">
   <img src="img/byton/lines.jpg" alt="Byton by Nora Zhao">
   <img src="img/byton/store1.jpg" alt="Byton by Nora Zhao">
 </div>
