--- a/byton.html
+++ b/byton.html
@@ -67,23 +67,13 @@
 </p>
 
 <div class="grid1">
+  <img src="img/byton/desktop.jpg" alt="Byton by Nora Zhao">
   <img src="img/byton/ui.jpg" alt="Byton by Nora Zhao">
-</div>
-
-<div class="grid1">
-  <img src="img/byton/lines.jpg" alt="Byton by Nora Zhao">
-  <img src="img/byton/store1.jpg" alt="Byton by Nora Zhao">
-</div>
-
-<div class="grid2 gridxto1">
-  <img src="img/byton/mobile.jpg" alt="Byton by Nora Zhao">
-  <img src="img/byton/ipad.jpg" alt="Byton by Nora Zhao">
+  <img src="img/byton/store2.jpg" alt="Byton by Nora Zhao">
 </div>
 
 <div class="grid1">
   <img src="img/byton/bag.jpg" alt="Byton by Nora Zhao">
-  <img src="img/byton/box.jpg" alt="Byton by Nora Zhao">
-  <img src="img/byton/book.jpg" alt="Byton by Nora Zhao">
   <img src="img/byton/card.jpg" alt="Byton by Nora Zhao">
 </div>
 
