--- a/navigation.html
+++ b/navigation.html
@@ -195,17 +195,16 @@
 
     <p class="en"><a href="/project/design-practice.html">- Design Practice</a></p>
     <p class="zh"><a href="/project/design-practice.html">- 设计实践</a></p>
-
-    <p class="en"><a href="/project/geometry-on-display.html">- Geometry on Display</a></p>
-    <p class="zh"><a href="/project/geometry-on-display.html">- 几何展示</a></p>
     <br>
 
     <p class="en type">Compilation:</p>
     <p class="zh type">合辑：</p>
 
+    <p class="en"><a href="/project/posters.html">- Posters</a></p>
+    <p class="zh"><a href="/project/posters.html">- 海报</a></p>
+
     <p class="en"><a href="/project/booklets.html">- Booklets</a></p>
     <p class="zh"><a href="/project/booklets.html">- 小册子</a></p>
-
 
   </nav>
 </div>
