--- a/project/booklets.html
+++ b/project/booklets.html
@@ -30,17 +30,14 @@
 <img src="/img/machine-translation/0.jpg" alt="Machine Translation by Nora Zhao">
 </main>
 
-
+<h2 class="en indent">Machine Translation</h2>
+<h2 class="zh indent">机器翻译</h2>
 
 <p class="en indent bodyText">
-  Booklet Title: Google Translation
-  <br>
   This booklet aims to visualise the influence of machine translation by comparing a sample text and its translation iteration side by side with information highlighted.
 </p>
 <p class="zh indent bodyText">
-  手册名称：谷歌翻译
-  <br>
-  本手册旨在通过将示例文本及其迭代翻译并排进行比较，用几种颜色突出显示的文本所传达信息间的差异，以可视化机器翻译带来的影响。
+  本手册旨在通过将示例文本及其迭代的机器翻译进行横向比较，用几种颜色突出显示的文本所传达信息间的差异，以可视化机器翻译带来的影响。
 </p>
 
 <div class="grid3">
@@ -57,41 +54,39 @@
   <img src="/img/machine-translation/11.jpg" alt="Machine Translation by Nora Zhao">
 </div>
 
+<h2 class="en indent">The Letter Evolution</h2>
+<h2 class="zh indent">字母演化论</h2>
+
 <p class="en indent bodyText">
-  Booklet Title: The Letter Evolution
-  <br>
   This experiment aims to demonstrate how pattern making techniques can be used to generate designs of typography and the matter of legibility.
   <br>
   The letter "e", being the mostly used letter in English together with many other languages, was chosen for demonstration. Futura was applied due to its geometric form.
 </p>
 <p class="zh indent bodyText">
-  手册名称：谷歌翻译
-  <br>
   该实验旨在演示图案制作技术如何用于生成字体设计及其可识别性的问题。
   <br>
   字母“e”作为英语以及许多其他语言中最常用的字母，在实验中被选中用于个例演示。Futura则是因其几何的设计在此作为字母“e”的字体。
 </p>
 
 <div class="grid3">
-  <img src="/img/letter-e/1.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/3.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/4.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/5.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/6.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/7.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/8.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/9.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/10.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/11.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/12.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/13.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/14.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/15.jpg" alt="Letter E by Nora Zhao">
-  <img src="/img/letter-e/17.jpg" alt="Letter E by Nora Zhao">
+  <img src="/img/the-letter-evolution/1.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/3.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/4.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/5.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/6.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/7.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/8.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/9.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/10.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/11.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/12.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/13.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/14.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/15.jpg" alt="The Letter Evolution by Nora Zhao">
+  <img src="/img/the-letter-evolution/17.jpg" alt="The Letter Evolution by Nora Zhao">
 </div>
 
 <div class="pageDivider"></div>
-
 <div class="nextPageDiv">
   <a href="/project/glitch-room.html">
     <p class="en nextText">Next Project</p>
