--- a/project/posters.html
+++ b/project/posters.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Geometry on Display 几何展示</title>
+<title>Posters 海报</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
@@ -18,29 +18,24 @@
 
 <main>
 <p class="en indent headerText">
-  Exhibition of four designer's practice in either an professional or academic context.
+  This page shows a compilation of posters.
 </p>
 <p class="zh indent headerText">
-  展示四位设计师在专业或学术背景下的实践。
+  本页面展示汇编的海报设计。
 </p>
 
-<h1 class="en">Geometry on Display</h1>
-<h1 class="zh">几何展示</h1>
+<h1 class="en">Posters</h1>
+<h1 class="zh">海报</h1>
 
-<div class="grid3 gridOutline" style="grid-gap: 0;">
-  <style>
-    .gridOutline > img {
-      outline: solid 1px black;
-    }
-  </style>
-  <img src="/img/geometry-on-display/1-1.png" alt="Geometry on Display by Nora Zhao">
-  <img src="/img/geometry-on-display/1-2.png" alt="Geometry on Display by Nora Zhao">
-  <img src="/img/geometry-on-display/1-3.png" alt="Geometry on Display by Nora Zhao">
+<div class="grid3">
+  <img src="/img/geometry-on-display/2-1.jpg" alt="Geometry on Display by Nora Zhao">
+  <img src="/img/geometry-on-display/2-2.jpg" alt="Geometry on Display by Nora Zhao">
+  <img src="/img/geometry-on-display/2-3.jpg" alt="Geometry on Display by Nora Zhao">
 </div>
-<h6 class="en imgDescription">△ Overview of the poster set.</h6>
-<h6 class="zh imgDescription">△ 本组海报概貌。</h6>
-
 </main>
+
+<h2 class="en indent">Geometry on Display</h2>
+<h2 class="zh indent">几何展示</h2>
 
 <p class="en indent bodyText">
   This set of posters aim at promoting a hypothetical exhibition about visual language and grammar at Kemistry Gallery, London.
@@ -58,18 +53,8 @@
   <img src="/img/geometry-on-display/2-3.jpg" alt="Geometry on Display by Nora Zhao">
 </div>
 
-<div class="grid1">
-  <img src="/img/geometry-on-display/4-1.jpg" alt="Geometry on Display by Nora Zhao">
-  <img src="/img/geometry-on-display/4-2.jpg" alt="Geometry on Display by Nora Zhao">
-  <img src="/img/geometry-on-display/4-3.jpg" alt="Geometry on Display by Nora Zhao">
-</div>
-
-<!-- <div class="grid1">
-  <img src="/img/geometry-on-display/3.jpg" alt="Geometry on Display by Nora Zhao">
-</div> -->
 
 <div class="pageDivider"></div>
-
 <div class="nextPageDiv">
   <a href="/project/glitch-room.html">
     <p class="en nextText">Next Project</p>
